k8s/nas-grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nas-grafana
  namespace: print-serv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nas-grafana
  template:
    metadata:
      labels:
        app: nas-grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana
        - name: grafana-config
          mountPath: /etc/grafana/grafana.ini
          subPath: grafana.ini
        - name: grafana-config
          mountPath: /etc/grafana/provisioning/dashboards/provider.yaml
          subPath: provider.yaml
        - name: grafana-dashboards
          mountPath: /etc/grafana/dashboards
        - name: grafana-datasources
          mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
          subPath: datasources.yaml
      volumes:
      - name: grafana-storage
        emptyDir: {}
      - name: grafana-config
        configMap:
          name: nas-grafana-config
      - name: grafana-dashboards
        configMap:
          name: nas-grafana-dashboards
      - name: grafana-datasources
        configMap:
          name: nas-grafana-datasources
