k8s/registry-ca-installer-ps.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: registry-ca-installer
  namespace: print-serv
  labels:
    app: registry-ca-installer
spec:
  selector:
    matchLabels:
      app: registry-ca-installer
  template:
    metadata:
      labels:
        app: registry-ca-installer
    spec:
      hostPID: true
      tolerations:
        - operator: Exists
      containers:
        - name: installer
          image: alpine:3.19
          securityContext:
            privileged: true
          command:
            - /bin/sh
            - -c
            - |
              set -eux
              REG_HOST=registry-irk-rw.devops.rgf.local
              mkdir -p /host/etc/containers/certs.d/${REG_HOST}
              cat >/tmp/ca.b64 <<'B64'
              LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZ0ekNDQTUrZ0F3SUJBZ0lVYTZETnBzbXpJbEdjbXkzQlZSdW85cjVaZ2hFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1l6RUxNQWtHQTFVRUJoTUNVbFV4RHpBTkJnTlZCQWdNQmsxdmMyTnZkekVQTUEwR0ExVUVCd3dHVFc5egpZMjkzTVF3d0NnWURWUVFLREFOU1IwWXhEREFLQmdOVkJBc01BMFJsZGpFV01CUUdBMVVFQXd3TmF6aHpMbkpuClppNXNiMk5oYkRBZUZ3MHlOVEF5TURZeE1UUXpNekZhRncwek5UQXlNRFF4TVRRek16RmFNR014Q3pBSkJnTlYKQkFZVEFsSlZNUTh3RFFZRFZRUUlEQVpOYjNOamIzY3hEekFOQmdOVkJBY01CazF2YzJOdmR6RU1NQW9HQTFVRQpDZ3dEVWtkR01Rd3 [...]
              B64
              base64 -d /tmp/ca.b64 > /tmp/ca.crt
              cp /tmp/ca.crt /host/etc/containers/certs.d/${REG_HOST}/ca.crt || true
              if pidof crio >/dev/null 2>&1; then kill -HUP $(pidof crio) || true; fi
              sleep 36000
          volumeMounts:
            - name: etc-containers
              mountPath: /host/etc/containers
      volumes:
        - name: etc-containers
          hostPath:
            path: /etc/containers
            type: DirectoryOrCreate
