k8s/demo-error-page.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-error-page
  namespace: print-serv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-error-page
  template:
    metadata:
      labels:
        app: demo-error-page
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-content
        configMap:
          name: demo-error-page
---
apiVersion: v1
kind: Service
metadata:
  name: demo-error-page
  namespace: print-serv
spec:
  selector:
    app: demo-error-page
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31006
  type: NodePort
