k8s/gotenberg-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas-gotenberg
  namespace: print-serv
spec:
  selector:
    app: nas-gotenberg
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
