k8s/nas-pdf-service-jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nas-jaeger
  labels:
    app: nas-jaeger
spec:
  selector:
    matchLabels:
      app: nas-jaeger
  template:
    metadata:
      labels:
        app: nas-jaeger
    spec:
      containers:
      - name: jaeger
        image: dh-mirror.gitverse.ru/jaegertracing/all-in-one:1.54
        ports:
        - containerPort: 16686
          name: ui
        - containerPort: 4317
          name: otlp-grpc
        - containerPort: 4318
          name: otlp-http
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: nas-jaeger
spec:
  selector:
    app: nas-jaeger
  ports:
  - name: ui
    port: 16686
    targetPort: ui
    nodePort: 31006
  - name: otlp-grpc
    port: 4317
    targetPort: otlp-grpc
    nodePort: 31007
  - name: otlp-http
    port: 4318
    targetPort: otlp-http
    nodePort: 31008
  type: NodePort
