k8s/nas-pdf-service-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nas-pdf-service-postgres
  namespace: print-serv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nas-pdf-service-postgres
  template:
    metadata:
      labels:
        app: nas-pdf-service-postgres
    spec:
      containers:
      - name: nas-pdf-service-postgres
        image: dh-mirror.gitverse.ru/postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: nas-pdf-service-postgres-storage
          mountPath: /var/lib/postgresql/data
        - name: nas-pdf-service-postgres-init
          mountPath: /docker-entrypoint-initdb.d
        - name: nas-pdf-service-postgres-conf
          mountPath: /etc/postgresql/postgresql.conf
          subPath: postgresql.conf
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "750m"
          limits:
            memory: "3Gi"
            cpu: "1500m"
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "pdf_service"]
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "pdf_service"]
          initialDelaySeconds: 120
          periodSeconds: 60
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 5
      volumes:
      - name: nas-pdf-service-postgres-storage
        persistentVolumeClaim:
          claimName: nas-pdf-service-postgres-pvc
      - name: nas-pdf-service-postgres-init
        configMap:
          name: nas-pdf-service-postgres-init
      - name: nas-pdf-service-postgres-conf
        configMap:
          name: nas-pdf-service-postgres-conf
---
apiVersion: v1
kind: Service
metadata:
  name: nas-pdf-service-postgres
  namespace: print-serv
spec:
  selector:
    app: nas-pdf-service-postgres
  ports:
  - port: 5432
    targetPort: 5432
